# genesis-lab

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
data/: registry.db
data/reference/: customer_service_reference.json  timeseries_reference.json
data/synthetic/: cs_smoke_v2.json  customer_service_100.json  customer_service_smoke_test.json  timeseries_smoke_test.json  ts_smoke_v2.json  ts_stationary_test.json
docs/: ARCHITECTURE.md  DEVLOG.md  DOMAIN2_TIMESERIES.md  DOMAIN3_FINANCIAL.md  PROJECTSTATUS.md  ROADMAP.md  TDR.md
models/trained/: intent_classifier.pkl
scripts/: diagnose_throttling.py  diagnose_ts_quality.py  generate_100.py  generate_data.py  health_check.py  register_datasets.py  register_training.py  smoke_test.py  smoke_test_ts.py  test_batch_generation.py  test_batch_inference.py  test_stationary_fix.py  test_timeseries_generation.py  validate_100.py
src/generation/: __init__.py  batch_inference.py  generator.py  schemas.py  schemas_future.py  timeseries_generator.py
src/generation/templates/: customer_service_prompts.py  timeseries_prompts.py
src/pipelines/: __init__.py  customer_service_pipeline.py
src/registry/: __init__.py  database.py
src/training/: __init__.py  intent_classifier.py  models.py  trainer.py
src/utils/: aws_client.py  download_references.py  visualization.py
src/utils/config/: __init__.py  loader.py  schemas.py
src/validation/: __init__.py  bias.py  quality.py  timeseries_quality.py
tests/: test_batch.py  test_bedrock_client.py  test_bedrock_integration.py  test_conv_pipeline.py  test_generators.py  test_registry.py  test_schemas.py  test_visualization.py
ui/: __init__.py  app.py
ui/components/: __init__.py  cards.py  charts.py  styles.py
ui/pages/: __init__.py  compare.py  generate.py  help.py  registry.py  training.py  validate.py
