[project]
name = "genesis-lab"
version = "0.1.0"
description = "Synthetic data generation lab using AWS Bedrock and multimodal agents"
requires-python = ">=3.10"

dependencies = [
    "boto3",
    "streamlit",
    "python-dotenv",
    "pandas",
    "numpy",
    "pydantic>=1.10.0",
    "datasets<4.0.0",
    "pyarrow>=22.0.0",
    "huggingface-hub>=1.2.2",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "botocore>=1.42.5",
    "pytest>=9.0.2",
]
