[project]
name = "genesis-lab"
version = "0.1.0"
description = "Synthetic data generation lab using AWS Bedrock and multimodal agents"
requires-python = ">=3.10"

dependencies = [
    "boto3",
    "streamlit",
    "python-dotenv",
    "pandas",
    "numpy",
    "pydantic>=1.10.0",
    "datasets<4.0.0",
    "pyarrow>=22.0.0",
    "huggingface-hub>=1.2.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
    "joblib>=1.5.3",
    "textblob>=0.18.0",
    "loguru>=0.7.0",
    "plotly>=6.5.2",
    "wordcloud>=1.9.5",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "botocore>=1.42.5",
    "pytest>=9.0.2",
]
